wip: import watching account, translations

--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
@@ -4,7 +4,7 @@
   <div class="login-passive__container">
     <div class="signup">
       <div class="signup__container">
-        <h1 class="signup__title">{{ 'watch_burst_account' | i18n }}</h1>
+        <h1 class="signup__title">{{ 'account_watch_short' | i18n }}</h1>
         <app-create-passive></app-create-passive>
       </div>
     </div>
