fix: multi network account management

--- a/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
@@ -1,4 +1,4 @@
-<span class="account-item inline">
+<span *ngIf="account" class="account-item inline">
       <div class="avatar-icon">
         <img *ngIf="avatarImgSrc" [src]="avatarImgSrc" alt="avatar-image" />
       </div>
