--- a/web/angular-wallet/src/app/main/dashboard/miner-dashboard/miner-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/miner-dashboard/miner-dashboard.component.html
@@ -65,6 +65,7 @@
       [rowspan]="layoutParameters.rowSpans.table"
     >
       <app-transactions-table-widget class="widget"
+                                     style="align-items: start"
                                      [account]="account"
                                      [displayedColumns]="layoutParameters.tableColumns"
       ></app-transactions-table-widget>
