feat: slightly improve account import

--- a/web/angular-wallet/src/app/layout/components/navbar/navbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 <!--</ng-container>-->
 
 <ng-container *ngIf="variant === 'vertical-style-1'">
-    <navbar-vertical-style-1 [selectedAccount]="selectedAccount"></navbar-vertical-style-1>
+    <navbar-vertical-style-1></navbar-vertical-style-1>
 </ng-container>
 
 <!--<ng-container *ngIf="variant === 'vertical-style-2'">-->
