--- a/web/angular-wallet/src/app/layout/vertical/layout-1/layout-1.component.html
+++ b/web/angular-wallet/src/app/layout/vertical/layout-1/layout-1.component.html
@@ -113,8 +113,7 @@
                   [folded]="fuseConfig.layout.navbar.folded"
                   lockedOpen="gt-md"
                   *ngIf="!fuseConfig.layout.navbar.hidden && selectedAccount">
-        <navbar [variant]="fuseConfig.layout.navbar.variant" class="left-navbar"
-                [selectedAccount]="selectedAccount"></navbar>
+        <navbar [variant]="fuseConfig.layout.navbar.variant" class="left-navbar"></navbar>
     </fuse-sidebar>
 </ng-template>
 <!-- / LEFT NAVBAR -->
