--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
+<div *ngIf="selectedAccount" class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
   <div class="logo">
     <img src="assets/images/logos/logo_white_horizontal.svg" class="logo-unfolded">
