--- a/web/angular-wallet/src/app/main/accounts/accounts.component.html
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.html
@@ -70,7 +70,7 @@
         </mat-header-cell>
         <mat-cell *matCellDef="let account">
           <div class="account-stack">
-            <a [routerLink]="['/account', account.account]">{{account.account | address}}</a>
+            <a [routerLink]="['/account', account.account]">{{account.account | address:false:true}}</a>
             <small>{{account.account}}</small>
           </div>
         </mat-cell>
