--- a/web/angular-wallet/src/app/main/accounts/accounts.component.scss
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.scss
@@ -12,6 +12,10 @@
     display: flex;
     flex-direction: row;
 
+    @include media-breakpoint('xs') {
+      flex-direction: column;
+    }
+
     .inputs {
       width: 100%;
       mat-form-field {
@@ -25,6 +29,8 @@
     }
 
     .buttons {
+      display: flex;
+      flex-direction: row;
       button {
         align-self: center;
         margin-right: 8px;
