--- a/web/angular-wallet/src/app/main/main.component.html
+++ b/web/angular-wallet/src/app/main/main.component.html
@@ -1,26 +1,14 @@
 <fuse-progress-bar></fuse-progress-bar>
-
-<ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-1'">
-  <vertical-layout-1></vertical-layout-1>
-</ng-container>
-<!--<ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-2'">-->
-<!--  <vertical-layout-2></vertical-layout-2>-->
-<!--</ng-container>-->
-<!--<ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-3'">-->
-<!--  <vertical-layout-3></vertical-layout-3>-->
-<!--</ng-container>-->
-<!--<ng-container *ngIf="fuseConfig.layout.style === 'horizontal-layout-1'">-->
-<!--  <horizontal-layout-1></horizontal-layout-1>-->
-<!--</ng-container>-->
-
+<vertical-layout-1></vertical-layout-1>
 
 <!-- THEME OPTIONS PANEL -->
-<!-- <button mat-icon-button class="warn mat-elevation-z2 theme-options-button"
-        (click)="toggleSidebarOpen('themeOptionsPanel')">
-  <mat-icon>settings</mat-icon>
-</button>
+<!-- This is from the original fuse theme, and can be interesting to keep...as this shows how to theme certain things -->
+<!--<button mat-icon-button class="warn mat-elevation-z2 theme-options-button"-->
+<!--        (click)="toggleSidebarOpen('themeOptionsPanel')">-->
+<!--  <mat-icon>settings</mat-icon>-->
+<!--</button>-->
 
-<fuse-sidebar name="themeOptionsPanel" class="theme-options-sidebar" position="right" [invisibleOverlay]="true">
-  <fuse-theme-options></fuse-theme-options>
-</fuse-sidebar> -->
+<!--<fuse-sidebar name="themeOptionsPanel" class="theme-options-sidebar" position="right" [invisibleOverlay]="true">-->
+<!--  <fuse-theme-options></fuse-theme-options>-->
+<!--</fuse-sidebar>-->
 <!-- / THEME OPTIONS PANEL -->
