--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -5,14 +5,12 @@
           [breadcrumbs]="[{label: 'accounts' | i18n , path: '/accounts'}]">
   <!-- / HEADER -->
 
-  <div *ngIf="!account.keys.publicKey" class="ribbon ribbon-top-right"><span>{{'unsafe' | i18n}}</span></div>
-  <div ngClass.gt-sm="p-24">
-    <div class="account-details">
-      <div class="explorer-link" matTooltip="{{'show_in_explorer' | i18n}}" (click)="openInExplorer()">
-        <mat-icon>link</mat-icon>
-      </div>
-      <div class="avatar">
-        <canvas #avatar></canvas>
+  <div ngClass.gt-sm="p-24" class="account-details">
+    <div class="explorer-link" matTooltip="{{'show_in_explorer' | i18n}}" (click)="openInExplorer()">
+      <mat-icon>link</mat-icon>
+    </div>
+    <div fxLayout="row" fxLayout.xs="column" fxFlexAlign.xs="center center">
+      <div class="avatar-icon">
         <img *ngIf="avatarImgSrc" [src]="avatarImgSrc" alt="avatar-image" />
       </div>
       <div class="description">
@@ -20,12 +18,12 @@
           <h2 *ngIf="account.name">{{ account.name }}</h2>
           <h2 *ngIf="!account.name">{{ account.account | address }}</h2>
           <h3>{{ account.account }}</h3>
+          <small>{{ getPublicKeyStatus() }}</small>
           <h4>{{ account.balanceNQT | amount:'planck' }}</h4>
         </div>
         <div *ngIf="src44" class="src44">
           <p>{{ src44.description }}</p>
           <a *ngIf="src44.homePage" [href]="src44.homePage" class="homepage">
-            <mat-icon class="mr-8">link</mat-icon>
             {{ 'homepage' | i18n }}
           </a>
         </div>
