--- a/web/angular-wallet/src/app/setup/account/create-active/record/record.component.scss
+++ b/web/angular-wallet/src/app/setup/account/create-active/record/record.component.scss
@@ -48,7 +48,6 @@
       flex-direction: row;
       align-items: center;
       font-weight: 100;
-      //width: 50%;
     }
   }
 
@@ -56,6 +55,22 @@
     padding: 10px 0;
     text-align: left;
   }
+
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    button {
+      margin: 0.5rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .buttons {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
 
   .icon-button {
     box-shadow: none;
@@ -78,6 +93,7 @@
   }
 
   .bordered {
+    padding: 4px;
     border: 1px #E0E0E0 solid;
   }
 
