fix: account find and network switch, non-block account details

--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -35,7 +35,9 @@
         <app-transaction-table
           [dataSource]="dataSource"
           [displayedColumns]="columns"
-          [account]="account">
+          [account]="account"
+          [isLoading]="isLoadingTransactions"
+        >
         </app-transaction-table>
       </mat-tab>
       <mat-tab label="{{ 'assets' | i18n }}">
