--- a/web/angular-wallet/src/app/main/settings/settings.component.html
+++ b/web/angular-wallet/src/app/main/settings/settings.component.html
@@ -1,11 +1,8 @@
 <app-page title="{{ 'settings' | i18n }}">
-  <div class="p-24" fxLayout="column">
-
-
-
+  <div class="p-20" fxLayout="column">
     <mat-list>
       <div class="node-selector">
-        <div class="font-size-14 font-weight-600 mb-8 secondary-text">{{"settings_node" | i18n}}</div>
+        <h2 class="mb-8 secondary-text">{{"settings_node" | i18n}}</h2>
         <div class="node-selector__automatic">
           <small>
             {{ 'selected_node' | i18n }}
