--- a/web/angular-wallet/src/app/main/accounts/accounts.component.html
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.html
@@ -47,144 +47,152 @@
       </div>
     </div>
 
-    <mat-table #table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="delete">
-        <mat-header-cell *matHeaderCellDef>
-          <mat-icon>delete</mat-icon>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let account" class="select-icon">
-          <mat-checkbox [(ngModel)]="selectedAccounts[account.account]"></mat-checkbox>
-        </mat-cell>
-      </ng-container>
+    <mat-tab-group>
+      <mat-tab label="{{ 'accounts' | i18n }}">
 
-      <ng-container matColumnDef="avatar">
-        <mat-header-cell *matHeaderCellDef></mat-header-cell>
-        <mat-cell *matCellDef="let account">
-          <img [src]="getAvatarUrl(account)" alt="account-avatar">
-        </mat-cell>
-      </ng-container>
+        <mat-table #table [dataSource]="dataSource" matSort>
+          <ng-container matColumnDef="delete">
+            <mat-header-cell *matHeaderCellDef>
+              <mat-icon>delete</mat-icon>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let account" class="select-icon">
+              <mat-checkbox [(ngModel)]="selectedAccounts[account.account]"></mat-checkbox>
+            </mat-cell>
+          </ng-container>
 
-      <ng-container matColumnDef="account">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{"account" | i18n}}
-        </mat-header-cell>
-        <mat-cell *matCellDef="let account">
-          <div class="account-stack">
-            <a [routerLink]="['/account', account.account]">{{account.account | address:false:true}}</a>
-            <small>{{account.account}}</small>
-          </div>
-        </mat-cell>
-      </ng-container>
+          <ng-container matColumnDef="avatar">
+            <mat-header-cell *matHeaderCellDef></mat-header-cell>
+            <mat-cell *matCellDef="let account">
+              <img [src]="getAvatarUrl(account)" alt="account-avatar">
+            </mat-cell>
+          </ng-container>
 
-      <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef mat-sort-header fxHide.xs>
-          {{'name' | i18n}}
-        </mat-header-cell>
-        <mat-cell *matCellDef="let account" fxHide.xs> {{account.name}} </mat-cell>
-      </ng-container>
+          <ng-container matColumnDef="account">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+              {{"account" | i18n}}
+            </mat-header-cell>
+            <mat-cell *matCellDef="let account">
+              <div class="account-stack">
+                <a [routerLink]="['/account', account.account]">{{account.account | address:false:true}}</a>
+                <small>{{account.account}}</small>
+              </div>
+            </mat-cell>
+          </ng-container>
 
-      <ng-container matColumnDef="balance">
-        <mat-header-cell *matHeaderCellDef mat-sort-header fxHide.xs>
-          {{'balance' | i18n }}
-        </mat-header-cell>
-        <mat-cell
-          fxHide.xs
-          *matCellDef="let account">{{account.balanceNQT | amount: 'planck':true }}</mat-cell>
-      </ng-container>
+          <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef mat-sort-header fxHide.xs>
+              {{'name' | i18n}}
+            </mat-header-cell>
+            <mat-cell *matCellDef="let account" fxHide.xs> {{account.name}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="balance">
+            <mat-header-cell *matHeaderCellDef mat-sort-header fxHide.xs>
+              {{'balance' | i18n }}
+            </mat-header-cell>
+            <mat-cell
+              fxHide.xs
+              *matCellDef="let account">{{account.balanceNQT | amount: 'planck':true }}</mat-cell>
+          </ng-container>
 
 
-      <ng-container matColumnDef="type">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{'status' | i18n}}
-        </mat-header-cell>
-        <mat-cell *matCellDef="let account">
-          <ng-container *ngIf="account.type === 'offline'">
+          <ng-container matColumnDef="type">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+              {{'status' | i18n}}
+            </mat-header-cell>
+            <mat-cell *matCellDef="let account">
+              <ng-container *ngIf="account.type === 'offline'">
             <span class="type-badge offline" matTooltip="{{'hint_offline_account' | i18n}}">
               <mat-icon class="mr-2">remove_red_eye</mat-icon>
               <div fxHide.xs>{{"account_offline" | i18n}}</div>
             </span>
-          </ng-container>
-          <ng-container *ngIf="account.type !== 'offline' && account.confirmed">
+              </ng-container>
+              <ng-container *ngIf="account.type !== 'offline' && account.confirmed">
             <span class="type-badge safe" matTooltip="{{'hint_online_account' | i18n}}">
               <mat-icon class="mr-2">verified_user</mat-icon>
               <div fxHide.xs>{{"account_safe" | i18n}}</div>
             </span>
-          </ng-container>
-          <ng-container *ngIf="account.type !== 'offline' && !account.confirmed">
+              </ng-container>
+              <ng-container *ngIf="account.type !== 'offline' && !account.confirmed">
             <span class="type-badge unsafe" matTooltip="{{'no_public_key_activate' | i18n}}"
                   (click)="activateAccount(account)">
               <mat-icon class="mr-2">lock_open</mat-icon>
               <div fxHide.xs>{{"account_unsafe" | i18n}}</div>
             </span>
+              </ng-container>
+            </mat-cell>
           </ng-container>
-        </mat-cell>
-      </ng-container>
 
 
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef>
-          <mat-icon matTooltip="{{'actions' | i18n}}">directions_run</mat-icon>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let account">
+          <ng-container matColumnDef="actions">
+            <mat-header-cell *matHeaderCellDef>
+              <mat-icon matTooltip="{{'actions' | i18n}}">directions_run</mat-icon>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let account">
 
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More Actions"
-                  matTooltip="{{'actions' | i18n}}">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button
-              *ngIf="isUnsafeAccount(account)"
-              mat-menu-item (click)="activateAccount(account)">
-              <mat-icon>lock</mat-icon>
-              <span>{{'activate' | i18n}}</span>
-            </button>
-            <button
-              mat-menu-item (click)="selectAccount(account)">
-              <mat-icon>check_box</mat-icon>
-              <span>{{'select_account' | i18n}}</span>
-            </button>
-            <button mat-menu-item (click)="copyToClipboard(account.account)">
-              <mat-icon>file_copy</mat-icon>
-              <span>{{'copy_account_id' | i18n}}</span>
-            </button>
-            <button *ngIf="!!account.keys.publicKey"
-                    mat-menu-item (click)="copyToClipboard(account.keys.publicKey)">
-              <mat-icon>file_copy</mat-icon>
-              <span>{{'copy_account_publickey' | i18n}}</span>
-            </button>
-            <button *ngIf="!!account.accountRSExtended"
-                    mat-menu-item (click)="copyToClipboard(account.accountRSExtended)">
-              <mat-icon>file_copy</mat-icon>
-              <span>{{'copy_account_address_extended' | i18n}}</span>
-            </button>
-            <button mat-menu-item (click)="openInExplorer(account)">
-              <mat-icon>link</mat-icon>
-              <span>{{'show_in_explorer' | i18n}}</span>
-            </button>
-            <button mat-menu-item (click)="routeToAccount(account)">
-              <mat-icon>remove_red_eye</mat-icon>
-              <span>{{'view' | i18n}}</span>
-            </button>
-            <button
-              *ngIf="account.type !== 'offline' && account.confirmed"
-              mat-menu-item (click)="sendToAccount(account)">
-              <mat-icon>publish</mat-icon>
-              <span>{{'send_signa' | i18n}}</span>
-            </button>
-            <button mat-menu-item (click)="deleteAccount(account)">
-              <mat-icon>delete</mat-icon>
-              <span>{{'delete' | i18n}}</span>
-            </button>
-          </mat-menu>
-        </mat-cell>
-      </ng-container>
+              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More Actions"
+                      matTooltip="{{'actions' | i18n}}">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button
+                  *ngIf="isUnsafeAccount(account)"
+                  mat-menu-item (click)="activateAccount(account)">
+                  <mat-icon>lock</mat-icon>
+                  <span>{{'activate' | i18n}}</span>
+                </button>
+                <button
+                  mat-menu-item (click)="selectAccount(account)">
+                  <mat-icon>check_box</mat-icon>
+                  <span>{{'select_account' | i18n}}</span>
+                </button>
+                <button mat-menu-item (click)="copyToClipboard(account.account)">
+                  <mat-icon>file_copy</mat-icon>
+                  <span>{{'copy_account_id' | i18n}}</span>
+                </button>
+                <button *ngIf="!!account.keys.publicKey"
+                        mat-menu-item (click)="copyToClipboard(account.keys.publicKey)">
+                  <mat-icon>file_copy</mat-icon>
+                  <span>{{'copy_account_publickey' | i18n}}</span>
+                </button>
+                <button *ngIf="!!account.accountRSExtended"
+                        mat-menu-item (click)="copyToClipboard(account.accountRSExtended)">
+                  <mat-icon>file_copy</mat-icon>
+                  <span>{{'copy_account_address_extended' | i18n}}</span>
+                </button>
+                <button mat-menu-item (click)="openInExplorer(account)">
+                  <mat-icon>link</mat-icon>
+                  <span>{{'show_in_explorer' | i18n}}</span>
+                </button>
+                <button mat-menu-item (click)="routeToAccount(account)">
+                  <mat-icon>remove_red_eye</mat-icon>
+                  <span>{{'view' | i18n}}</span>
+                </button>
+                <button
+                  *ngIf="account.type !== 'offline' && account.confirmed"
+                  mat-menu-item (click)="sendToAccount(account)">
+                  <mat-icon>publish</mat-icon>
+                  <span>{{'send_signa' | i18n}}</span>
+                </button>
+                <button mat-menu-item (click)="deleteAccount(account)">
+                  <mat-icon>delete</mat-icon>
+                  <span>{{'delete' | i18n}}</span>
+                </button>
+              </mat-menu>
+            </mat-cell>
+          </ng-container>
 
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
 
-    <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 500]" [showFirstLastButtons]="true">
-    </mat-paginator>
+        <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 500]" [showFirstLastButtons]="true">
+        </mat-paginator>
+      </mat-tab>
+      <mat-tab label="{{ 'contacts' | i18n }}">
+        <app-contacts-table></app-contacts-table>
+      </mat-tab>
+    </mat-tab-group>
 
   </div>
 </app-page>
