--- a/web/angular-wallet/src/app/main/dashboard/widgets/balance-chart/balance-chart.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/balance-chart/balance-chart.component.html
@@ -4,13 +4,10 @@
       <small *ngIf="account.transactions.length" class="grey-500-fg font-size-10 since-text">{{"recent_transactions_since" | i18n}}&nbsp;{{firstDate|date:'short':null:locale}}</small>
       <div class="balance-info mt-16">
         <div class="balance">
-          <h1 class="pr-8 my-0">{{accountBalances.totalBalance.getSigna() | amount}}</h1>
+          <h1 class="pr-8 my-0">{{accountBalances.totalBalance.getSigna() | amount:'signa'}}</h1>
           <div class="inline badge text-center" [ngClass]="{'gain': balanceChange.signa >= 0, 'loss': balanceChange.signa < 0}" matTooltip="{{'chart_balance_change' | i18n}}">
-            <p>{{balanceChange.signa >= 0 ? '+' : '-'}}</p>
-            <p class="ml-4">{{balanceChange.signa | amount:'signa':true}}</p>
-            <p class="ml-4">
-              ({{balanceChange.percent.toFixed(2)}} %)
-            </p>
+            <p class="ml-4">{{balanceChange.signa >= 0 ? '+' : ''}}{{balanceChange.signa | amount:'signa':true}}</p>
+            <p class="ml-4">({{balanceChange.signa >= 0 ? '+' : ''}}{{balanceChange.percent | number:'1.0-2': locale}} %)</p>
           </div>
         </div>
         <div class="inline">
