--- a/web/angular-wallet/src/app/main/accounts/accounts.component.html
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.html
@@ -5,21 +5,10 @@
     <div class="action-row">
       <div class="inputs">
         <mat-form-field>
-          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+          <input matInput [(ngModel)]="filter"  (keyup)="applyFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
       </div>
       <div class="buttons">
-
-        <button
-          *ngIf="getSelectedAccounts().length"
-          mat-raised-button
-          matTooltip="{{'confirm_delete_accounts_hint' | i18n}}"
-          color="warn"
-          (click)="deleteSelectedAccounts()"
-        >
-          <mat-icon>delete</mat-icon>
-          {{"delete_selected" | i18n}}
-        </button>
 
         <button
           mat-mini-fab
@@ -30,6 +19,10 @@
         </button>
         <mat-menu #accountMenu="matMenu">
           <ng-container *ngIf="!getSelectedAccounts().length">
+            <button mat-menu-item
+                    (click)="openAddContactDialog()">
+              {{ 'add_contact' | i18n }}
+            </button>
             <button mat-menu-item
                     (click)="router.navigate(['/login/passive'])">
               {{ 'account_watch_short' | i18n }}
@@ -53,7 +46,19 @@
         <mat-table #table [dataSource]="dataSource" matSort>
           <ng-container matColumnDef="delete">
             <mat-header-cell *matHeaderCellDef>
-              <mat-icon>delete</mat-icon>
+              <ng-container *ngIf="getSelectedAccounts().length === 0">
+                <mat-icon class="no-button" >delete</mat-icon>
+              </ng-container>
+              <ng-container *ngIf="getSelectedAccounts().length">
+                <button
+                  mat-icon-button
+                  matTooltip="{{'confirm_delete_accounts_hint' | i18n}}"
+                  color="warn"
+                  (click)="deleteSelectedAccounts()"
+                >
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </ng-container>
             </mat-header-cell>
             <mat-cell *matCellDef="let account" class="select-icon">
               <mat-checkbox [(ngModel)]="selectedAccounts[account.account]"></mat-checkbox>
@@ -73,7 +78,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let account">
               <div class="account-stack">
-                <a [routerLink]="['/account', account.account]">{{account.account | address:false:true}}</a>
+                <app-address [accountId]="account.account" noActions></app-address>
                 <small>{{account.account}}</small>
               </div>
             </mat-cell>
@@ -186,11 +191,11 @@
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
 
-        <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 500]" [showFirstLastButtons]="true">
+        <mat-paginator #paginator *ngIf="paginationEnabled" [pageSize]="10" [pageSizeOptions]="[10, 20, 500]" [showFirstLastButtons]="true">
         </mat-paginator>
       </mat-tab>
       <mat-tab label="{{ 'contacts' | i18n }}">
-        <app-contacts-table></app-contacts-table>
+        <app-contacts-table [selectedAccount]="selectedAccount" [filter]="filter" [contacts]="contacts"></app-contacts-table>
       </mat-tab>
     </mat-tab-group>
 
