--- a/web/angular-wallet/src/app/components/recipient-input/recipient-input.component.html
+++ b/web/angular-wallet/src/app/components/recipient-input/recipient-input.component.html
@@ -3,12 +3,17 @@
 <mat-form-field>
   <mat-label>{{ 'recipient' | i18n }}</mat-label>
   <div class="container" fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
+    <contact-selector #contactSelector></contact-selector>
     <input matInput
+           #recipientInput
            [(ngModel)]="recipientValue"
            (ngModelChange)="onRecipientFieldInputChange(recipientValue)"
            (blur)="validateRecipient(recipientValue)"
+           (click)="openContactSelector()"
            placeholder="{{ 'enter_recipient' | i18n }}"
-           [disabled]="disabled">
+           [disabled]="disabled"
+           autocomplete="off"
+    >
 
     <div *ngIf="recipient.type !== 1 && recipient.status !== 'unstoppable-outage'"
          class="recipient-address"
