--- a/web/angular-wallet/src/app/components/recipient-input/contact-selector/contact-selector.component.html
+++ b/web/angular-wallet/src/app/components/recipient-input/contact-selector/contact-selector.component.html
@@ -1,4 +1,4 @@
-<div class="contact-menu">
+<div class="mt-24">
   <div #menuTrigger="matMenuTrigger" [matMenuTriggerFor]="contactMenu"></div>
   <mat-menu #contactMenu>
     <ng-container *ngIf="contacts.length">
