--- a/web/angular-wallet/src/app/main/accounts/accounts.component.html
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.html
@@ -12,7 +12,7 @@
 
         <button
           mat-mini-fab
-          matTooltip="{{'add_account' | i18n}}"
+          matTooltip="{{'add_account_or_contact' | i18n}}"
           [matMenuTriggerFor]="accountMenu"
         >
           <mat-icon>add</mat-icon>
