--- a/web/angular-wallet/src/app/components/add-contact-dialog/add-contact-dialog.component.html
+++ b/web/angular-wallet/src/app/components/add-contact-dialog/add-contact-dialog.component.html
@@ -3,7 +3,7 @@
       {{ 'add_contact' | i18n }}
     </h1>
   <div mat-dialog-content>
-    <recipient-input [recipientValue]="accountId" (recipientChange)="onRecipientChange($event)"></recipient-input>
+    <recipient-input [recipientValue]="accountId" (recipientChange)="onRecipientChange($event)" noContacts></recipient-input>
     <mat-form-field class="mt-16 w-100-p">
       <mat-label>{{ 'name' | i18n }}</mat-label>
       <input matInput
