--- a/web/angular-wallet/src/app/main/accounts/accounts.component.scss
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.scss
@@ -105,6 +105,11 @@
       color: #000000DE;
     }
 
+    .new {
+      background: greenyellow;
+      color: #000000DE;
+    }
+
     .safe {
       background: #00FF88;
       color: #000000DE;
