--- a/web/angular-wallet/src/app/main/send-message/send-message.component.html
+++ b/web/angular-wallet/src/app/main/send-message/send-message.component.html
@@ -9,5 +9,7 @@
       <p>{{getBalance() | amount }}</p>
     </div>
   </div>
-  <app-send-message-form [fees]="fees" [account]="account"></app-send-message-form>
+  <div class="pl-20 pr-20">
+    <app-send-message-form [fees]="fees" [account]="account"></app-send-message-form>
+  </div>
 </app-page>
