--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -9,80 +9,47 @@
       <img src="assets/images/logos/btdex-logo.png" [width]="16" alt="BTDEX Logo">BTDEX
     </a>
   </small>
-  <mat-table *ngIf="dataSource.data.length > 0" [dataSource]="dataSource" matSort>
-
+  <mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="token">
       <mat-header-cell *matHeaderCellDef>{{ 'asset' | i18n }}</mat-header-cell>
       <mat-cell *matCellDef="let token">
-        <ng-container *ngIf="!isLoading">
           <mat-icon class="icon" matTooltip="{{ token.description }}">info</mat-icon>
           <div class="stacked ml-8">
             <div>{{ token.name }}</div>
             <div class="smaller">{{ token.id }}</div>
           </div>
-        </ng-container>
-        <ng-container *ngIf="isLoading">
-          <div class="skeleton">
-            <ngx-skeleton-loader count="1" [theme]="{height: '16px', margin: '0'}"></ngx-skeleton-loader>
-            <ngx-skeleton-loader count="1" [theme]="{height: '10px', margin: '0'}"></ngx-skeleton-loader>
-          </div>
-        </ng-container>
       </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="balance">
       <mat-header-cell *matHeaderCellDef>{{ 'balance' | i18n }}</mat-header-cell>
       <mat-cell *matCellDef="let token">
-        <ng-container *ngIf="!isLoading">
           <div class="stacked">
             <div>{{ token.balance | number:'1.0-6': locale }}</div>
             <div class="smaller">{{ token.total | amount : 'signa' : true}}</div>
           </div>
-        </ng-container>
-        <ng-container *ngIf="isLoading">
-          <div class="skeleton">
-            <ngx-skeleton-loader count="1" [theme]="{height: '16px', margin: '0'}"></ngx-skeleton-loader>
-            <ngx-skeleton-loader count="1" [theme]="{height: '10px', margin: '0'}"></ngx-skeleton-loader>
-          </div>
-        </ng-container>
       </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="lastPrice">
       <mat-header-cell *matHeaderCellDef>{{ 'last_price' | i18n }}</mat-header-cell>
       <mat-cell *matCellDef="let token">
-        <ng-container *ngIf="!isLoading">
           <div class="stacked">
             <div>{{ token.priceInfo.amount | amount : 'signa' : true}}</div>
             <div class="smaller price-change {{getTrend(token.priceInfo.change)}}">
               {{token.priceInfo.change | percent : '1.2-4': locale}}
             </div>
           </div>
-        </ng-container>
-        <ng-container *ngIf="isLoading">
-          <div class="skeleton">
-            <ngx-skeleton-loader count="1" [theme]="{height: '16px', margin: '0'}"></ngx-skeleton-loader>
-            <ngx-skeleton-loader count="1" [theme]="{height: '10px', margin: '0'}"></ngx-skeleton-loader>
-          </div>
-        </ng-container>
       </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="supply">
       <mat-header-cell *matHeaderCellDef>{{ 'supply' | i18n }}</mat-header-cell>
       <mat-cell *matCellDef="let token">
-        <ng-container *ngIf="!isLoading">
           <div class="stacked">
             <div>{{ token.supply | number : '': locale }}</div>
             <div class="smaller">{{ getShare(token) | percent : '1.2-4': locale }}</div>
           </div>
-        </ng-container>
-        <ng-container *ngIf="isLoading">
-          <div class="skeleton">
-            <ngx-skeleton-loader count="1" [theme]="{height: '16px', margin: '0'}"></ngx-skeleton-loader>
-            <ngx-skeleton-loader count="1" [theme]="{height: '10px', margin: '0'}"></ngx-skeleton-loader>
-          </div>
-        </ng-container>
       </mat-cell>
     </ng-container>
 
@@ -100,8 +67,21 @@
       </mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="nodata">
+      <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length"
+          style="margin: 0 auto"><h2>{{'no_tokens_available'|i18n}}</h2></td>
+    </ng-container>
+
+    <ng-container matColumnDef="loading">
+      <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length"
+          style="margin: 0 auto"><h2>{{'loading'|i18n}}</h2></td>
+    </ng-container>
+
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-footer-row [hidden]="isLoading || dataSource.data.length!==0" *matFooterRowDef="['nodata']"></mat-footer-row>
+    <mat-footer-row [hidden]="!isLoading" *matFooterRowDef="['loading']"></mat-footer-row>
   </mat-table>
 
   <mat-paginator
@@ -113,7 +93,4 @@
   >
   </mat-paginator>
 
-  <div *ngIf="dataSource.data.length === 0" class="text-center">
-    <h2>{{'no_tokens_available'|i18n}}</h2>
-  </div>
 </div>
